--- a/frontend/src/assets/styles/ProfileSideBar.css
+++ b/frontend/src/assets/styles/ProfileSideBar.css
@@ -1,19 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 .profileSideBar {
-    width: 280px;
-    padding: 1.5rem;
+    width: 100%;
+    height: 100%;
+    padding: 3rem 1.5rem;
     background-color: #f9f9f9;
     border-right: 1px solid #ddd;
     border-radius: 12px;
     font-family: system-ui, sans-serif;
-    justify-content: space-between;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    height: auto;
+    box-sizing: border-box;
 }
 
 .profileImage {
