--- a/frontend/src/assets/styles/ArtworkForm.css
+++ b/frontend/src/assets/styles/ArtworkForm.css
@@ -33,12 +33,14 @@
 
 .artwork-modal h2 {
     margin-bottom: 1rem;
+    color: white;
 }
 
 .artwork-modal form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    color: white;
 }
 
 .artwork-modal input[type="text"],
@@ -48,7 +50,7 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #fff;
-    color: #000;
+    color: #000000;
     transition: border-color 0.2s, box-shadow 0.2s;
     text-align: center;
     font-family: 'Permanent Marker', cursive;
@@ -101,7 +103,7 @@
 }
 .file-upload-icon {
     font-size: 2.5rem;    
-    color: #000000;     
+    color: #fffdfd;     
     cursor: pointer;
     user-select: none;
     display: inline-flex; 
