--- a/frontend/src/assets/styles/NavBar.css
+++ b/frontend/src/assets/styles/NavBar.css
@@ -1,12 +1,11 @@
 header {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
     background-color: white;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    z-index: 999999;
 }
 
 .navbar-container {
