--- a/frontend/src/assets/styles/SignupPage.css
+++ b/frontend/src/assets/styles/SignupPage.css
@@ -42,8 +42,9 @@
 .signup-form input[type="submit"] {
     padding: 0.75rem;
     font-size: 1rem;
-    background-color: #12d479;
+    background-color: #1fd9b7;
     color: white;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     border: none;
     border-radius: 8px;
     cursor: pointer;
@@ -51,7 +52,7 @@
 }
 
 .signup-form input[type="submit"]:hover {
-    background-color: #2fb962;
+    background-color: #158571;
     transform: translateY(-1px);
 }
 
