--- a/frontend/src/assets/styles/MapSideBar.css
+++ b/frontend/src/assets/styles/MapSideBar.css
@@ -165,6 +165,7 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 1rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     font-weight: 600;
     font-family: 'Permanent Marker', cursive;
     transition: background-color 0.2s ease, transform 0.1s ease;
@@ -227,6 +228,7 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 12px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     font-family: 'Permanent Marker', cursive;
     transition: background-color 0.2s ease, transform 0.1s ease;
 }
@@ -246,6 +248,7 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: 1rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     font-family: 'Permanent Marker', cursive;
     transition: background-color 0.2s ease, transform 0.1s ease;
     margin-top: 10px;
