--- a/frontend/src/assets/styles/HomePage.css
+++ b/frontend/src/assets/styles/HomePage.css
@@ -46,9 +46,8 @@ html, body, #root {
     display: flex;
     flex-direction: column;
     color: black;
-    background-color: #f0f0f000;
+    background-color: rgba(218, 214, 214, 0.628);;
     border-radius: 16px;
-    /* padding: 1rem; */
     box-sizing: border-box;
     overflow: hidden;
 }
@@ -63,7 +62,6 @@ html, body, #root {
 
 .profile-main-container {
     height: 100%;
-    margin: 3px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -71,7 +69,7 @@ html, body, #root {
 
 .tab-bar {
     display: flex;
-    width: 100%;
+    margin: 13px;
 }
 
 .tab-button {
@@ -116,3 +114,6 @@ html, body, #root {
     text-align: center;
 }
 
+.tab-content-container ul {
+    padding-right: 0;
+}
