--- a/frontend/src/assets/styles/HomePage.css
+++ b/frontend/src/assets/styles/HomePage.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/background.webp');
+    background-image: url('/background-bw.png');
     background-size: cover;
     background-position: center 5px;
     background-repeat: no-repeat;
@@ -38,6 +38,7 @@ html, body, #root {
     color: black;
     overflow-y: auto;
     box-sizing: border-box;
+    border: 2px solid #3c3c3c;
 }
 
 /* Main content styling */
@@ -46,10 +47,11 @@ html, body, #root {
     display: flex;
     flex-direction: column;
     color: black;
-    background-color: rgba(218, 214, 214, 0.628);;
+    background-color: rgba(56, 56, 56, 0.649);;
     border-radius: 16px;
     box-sizing: border-box;
     overflow: hidden;
+    border: 2px solid #3c3c3c;
 }
 
 /* Map container inside main content */
@@ -76,7 +78,7 @@ html, body, #root {
     flex: 1;
     padding: 0.75rem;
     font-size: 1.5rem;
-    background-color: #1fd9b7;
+    background-color: #ff51b0;
     color: white;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
     border: none;
@@ -86,10 +88,11 @@ html, body, #root {
     font-family: 'Permanent Marker', cursive;
     margin: 3px;
     transition: background-color 0.2s ease, transform 0.1s ease;
+    border: 2px solid #d84295;
 }
 
 .tab-button:hover {
-    background-color:  #158571;
+    background-color:  #ff2ea1;
     transform: translateY(-1px);
 }
 
