--- a/frontend/src/assets/styles/ProfileSideBar.css
+++ b/frontend/src/assets/styles/ProfileSideBar.css
@@ -13,6 +13,7 @@
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
+    border: 2px solid #1fd9b7;
 }   
 
 .profileImage {
@@ -25,7 +26,7 @@
 }
 
 .initials {
-    font-size: 1.75rem;
+    font-size: 2rem;
     font-weight: bold;
     margin-bottom: 0.25rem;
     color: #333;
@@ -34,7 +35,7 @@
 
 
 .fullName {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     font-weight: 600;
     margin-bottom: 0.2rem;
     color: #222;
@@ -42,7 +43,7 @@
 }
 
 .email {
-    font-size: 0.9rem;
+    font-size: 1.3rem;
     color: #666;
     margin-bottom: 1rem;
     word-break: break-word;
@@ -53,16 +54,17 @@
 hr {
     width: 100%;
     border: none;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #1fd9b7;
     margin: 1rem 0;
 }
 
 .stat {
-    font-size: 0.95rem;
-    color: #444;
+    font-size: 1.1rem;
     margin-bottom: 0.4rem;
     width: 100%;
     text-align: center;
     font-family: 'Permanent Marker', cursive;
     padding-top: 1rem;
+    color: #222222;
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.841);
 }
