--- a/frontend/src/assets/styles/MapSideBar.css
+++ b/frontend/src/assets/styles/MapSideBar.css
@@ -239,7 +239,7 @@
 .distance-control label {
     margin-bottom: 10px;
     font-size: 14px;
-    color: white;
+    color: black;
     font-family: 'Permanent Marker', cursive;
 }
 
@@ -253,7 +253,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 12px;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(0, 0, 0, 0.8);
     margin-bottom: 10px;
     font-family: 'Permanent Marker', cursive;
 }
