--- a/frontend/src/assets/styles/ProfileSideBar.css
+++ b/frontend/src/assets/styles/ProfileSideBar.css
@@ -13,7 +13,7 @@
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    border: 2px solid #1fd9b7;
+    /* border: 2px solid #1fd9b7; */
 }   
 
 .profileImage {
