removed left badge on popup and replaced with authenticated state. Updated comment section and resixed text input box when editing

--- a/frontend/src/assets/styles/ArtworkFullPopup.css
+++ b/frontend/src/assets/styles/ArtworkFullPopup.css
@@ -80,7 +80,7 @@
   margin-right: 24px;
   font-size: 30px;
   font-weight: 600;
-  color: white;
+  color: rgb(255, 255, 255);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
